# superposition_zoo

./: .gitignore  AGENTS.md  EXPERIMENT_LOG.md  README.md  pyproject.toml
configs/: phase0_toy_superposition.yaml  phase1_default.yaml  phase1_easy.yaml  zoo_starting_six.yaml
src/superposition_zoo/: __init__.py  causal_check.py  cli.py  config.py  features.py  recall_task.py  sweep.py  train.py
src/superposition_zoo/metrics/: causal.py  interference_report.py  packing.py  recall.py  reliability.py
src/superposition_zoo/mixing/: __init__.py  base.py  delta_net.py  hard_routing.py  linear_attention.py  ssm.py  standard_attention.py  vsa_binding.py
src/superposition_zoo/models/: sequence_model.py  toy_autoencoder.py
tests/: conftest.py  mixing_helpers.py  test_causal_check.py  test_cli.py  test_config.py  test_delta_net.py  test_features.py  test_hard_routing.py  test_interference_report.py  test_linear_attention.py  test_metrics_causal.py  test_metrics_packing.py  test_metrics_recall.py  test_metrics_reliability.py  test_mixing_base.py  test_positional_encoding.py  test_recall_task.py  test_sequence_model.py  test_ssm.py  test_standard_attention.py  test_sweep_smoke.py  test_toy_autoencoder.py  test_train_tiny.py  test_vsa_binding.py
