[project]
name = "superposition-zoo"
version = "0.1.0"
description = "A research harness for studying how sequence-mixing architectures causally shape superposition and feature isolation, via ground-truth synthetic benchmarks."
readme = "README.md"
license = "MIT"
authors = [
    { name = "nshkrdotcom", email = "127063941+nshkrdotcom@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "torch>=2.12.1",
]

[project.scripts]
szoo = "superposition_zoo.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
